# react-tetris

./: .eslintrc.js  .gitignore  .prettierrc  .prettierrc.js  BUILD.bazel  README.md  WORKSPACE  flake.nix  index.html  index.tmpl.html  netlify.build.sh  package.json  rollup.config.js  tsconfig.json
.agents/: AGENTS.md
app/: BUILD.bazel  app.tsx  index.html  index.tsx  store.ts
app/pages/welcome/: BUILD.bazel  welcome.tsx
src/: App.tsx  index.tsx  serviceWorker.ts
src/app/: store.ts
src/features/counter/: Counter.tsx  counterSlice.ts
