load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "app",
    srcs = [
        "app.tsx",
        "index.tsx",
        "store.ts",
    ],
    deps = [
        "//app/pages/welcome",
        "@npm//@types",
        "@npm//redux",
        "@npm//redux-devtools-extension",
        "@npm//redux-saga",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "react_tetris/app/index",
    port = 8080,
    serving_path = "/bundle.js",
    static_files = [":index.html"],
    deps = [
        ":app",
        "@npm//react:react__umd",
        "@npm//react-dom:react-dom__umd",
        "@npm//react-redux:react-redux__umd",
        "@npm//react-router-dom:react-router-dom__umd",
        "@npm//redux:redux__umd",
    ],
)
